Remove a few warnings, check doc size instead of null