@@ -11,14 +11,17 @@ import java.util.*;
 import static com.mongodb.client.model.Filters.exists;
 
 public class DiscordServer implements ServerSpecificAccessors{
-    String _id;
-    private MongoDatabase mongoDatabase;
-    private MongoCollection settingsCollection;
-    private MongoCollection userCollection;
+    private static final String SERVER_SETTINGS_DOC = "Server_Settings";
+    private static final String USER_SETTINGS_DOC = "User_Settings";
+
+    private final String _id;
+    private final MongoDatabase mongoDatabase;
+    private final MongoCollection<Document> settingsCollection;
+    private final MongoCollection<Document> userCollection;
 
     public DiscordServer(MongoClient mongoClient, String databaseName) {
-        this.mongoDatabase = mongoClient.getDatabase(databaseName);
-        this._id = databaseName;
+        mongoDatabase = mongoClient.getDatabase(databaseName);
+        _id = databaseName;
         settingsCollection = getSettingsCollection();
         userCollection = getUsersCollection();
     }
@@ -49,11 +52,11 @@ public class DiscordServer implements ServerSpecificAccessors{
         return out.toString();
     }
 
-    private MongoCollection getSettingsCollection() {
-        MongoCollection settings = mongoDatabase.getCollection("Serverwide_Settings");
-        if(settings == null) { // if this is a new database (the bot server settings need to be initialised)
-            mongoDatabase.createCollection("Serverwide_Settings");
-            settings = mongoDatabase.getCollection("Serverwide_Settings");
+    private MongoCollection<Document> getSettingsCollection() {
+        MongoCollection<Document> settings = mongoDatabase.getCollection(SERVER_SETTINGS_DOC);
+        if(settings.estimatedDocumentCount() == 0) { // if this is a new database (the bot server settings need to be initialised)
+            mongoDatabase.createCollection(SERVER_SETTINGS_DOC);
+            settings = mongoDatabase.getCollection(SERVER_SETTINGS_DOC);
             ArrayList<Document> init = new ArrayList<>();
             init.add(new Document().append("Music_Volume", 20)); // Music Setting Document
             init.add(new Document().append("Dice Rolling", true) // Modules Setting Document
@@ -67,26 +70,11 @@ public class DiscordServer implements ServerSpecificAccessors{
         return settings;
     }
 
-    public void initSettings() {
-        mongoDatabase.createCollection("Serverwide_Settings");
-        MongoCollection settings = mongoDatabase.getCollection("Serverwide_Settings");
-        ArrayList<Document> init = new ArrayList<>();
-        init.add(new Document().append("Music_Volume", 100)); // Music Setting Document
-        init.add(new Document().append("Dice Rolling", true) // Modules Setting Document
-                .append("Music", true)
-                .append("Roles", true)
-                .append("Timezones", true)
-                .append("Modules_Enabled", 4));
-        init.add(new Document().append("Public_Roles", Arrays.asList())); // Role Settings
-        settings.insertMany(init);
-        this.settingsCollection = settings;
-    }
-
-    private MongoCollection getUsersCollection() {
-        MongoCollection users = mongoDatabase.getCollection("User_Settings");
-        if(users == null) { // if this is a new database (the bot server settings need to be initialised)
-            mongoDatabase.createCollection("User_Settings");
-            users = mongoDatabase.getCollection("User_Settings");
+    private MongoCollection<Document> getUsersCollection() {
+        MongoCollection<Document> users = mongoDatabase.getCollection(USER_SETTINGS_DOC);
+        if(users.estimatedDocumentCount() == 0) { // if this is a new database (the bot server settings need to be initialised)
+            mongoDatabase.createCollection(USER_SETTINGS_DOC);
+            users = mongoDatabase.getCollection(USER_SETTINGS_DOC);
             ArrayList<Document> init = new ArrayList<>();
             // I don't think we have to initialise any users but we can here if we want
             users.insertMany(init);
@@ -96,11 +84,10 @@ public class DiscordServer implements ServerSpecificAccessors{
 
     public Map<String, Map<String, String>> getUsers() {
         Map<String, Map<String, String>> users = new HashMap<>();
-        for(Object user : userCollection.find()) {
+        for(Document user : userCollection.find()) {
             Map<String, String> data = new HashMap<>();
-            Document u = (Document) user;
-            for(String k : u.keySet()) {
-                data.put(k, u.get(k).toString());
+            for(String k : user.keySet()) {
+                data.put(k, user.get(k).toString());
             }
             users.put(data.get("Discord_Tag"), data);
         }
@@ -122,7 +109,7 @@ public class DiscordServer implements ServerSpecificAccessors{
         Map<String, String> data = new HashMap<>();
         BasicDBObject matchQuery = new BasicDBObject();
         matchQuery.put("Discord_Tag", discordTag);
-        Document user = (Document)  userCollection.find(matchQuery).first();
+        Document user =  userCollection.find(matchQuery).first();
         if(user == null) return null;
         for(String k : user.keySet()) {
             data.put(k, user.get(k).toString());
@@ -138,7 +125,7 @@ public class DiscordServer implements ServerSpecificAccessors{
 
     @Override
     public int getMusicVolume() {
-        Document music_vol = (Document) settingsCollection.find(exists("Music_Volume")).first();
+        Document music_vol = settingsCollection.find(exists("Music_Volume")).first();
         assert music_vol != null;
         return music_vol.getInteger("Music_Volume");
     }
@@ -153,8 +140,8 @@ public class DiscordServer implements ServerSpecificAccessors{
     @Override
     public Map<String, Boolean> getModules() {
         Map<String, Boolean> modules = new HashMap<>();
-        //System.out.println("SETTING FOUND: " + settingsCollection.find(exists("Modules_Enabled")).first());
-        Document modulesEnabled = (Document) settingsCollection.find(exists("Modules_Enabled")).first();
+        Document modulesEnabled = settingsCollection.find(exists("Modules_Enabled")).first();
+        assert modulesEnabled != null;
         for (String key : modulesEnabled.keySet()) {
             if(key.equals("Modules_Enabled") || key.equals("_id"))
                 continue;
@@ -164,7 +151,8 @@ public class DiscordServer implements ServerSpecificAccessors{
     }
 
     public void setModule(String moduleName, boolean state) {
-        Document modulesEnabled = (Document) settingsCollection.find(exists("Modules_Enabled")).first();
+        Document modulesEnabled = settingsCollection.find(exists("Modules_Enabled")).first();
+        assert modulesEnabled != null;
         Object numEnabled = modulesEnabled.get(moduleName);
         if(numEnabled == null) // if moduleName is new add it
             modulesEnabled.put("Modules_Enabled", (int) modulesEnabled.get("Modules_Enabled") + 1);
@@ -179,25 +167,25 @@ public class DiscordServer implements ServerSpecificAccessors{
 
     // array list of roles in public roles
     @Override
-    public ArrayList<String> getRoles() {
-        Document publicRoles = (Document) settingsCollection.find(exists("Public_Roles")).first();
+    public List<Long> getRoles() {
+        Document publicRoles = settingsCollection.find(exists("Public_Roles")).first();
         if(publicRoles == null)
             return null;
-        return (ArrayList<String>) publicRoles.get("Public_Roles");
+        return publicRoles.getList("Public_Roles", Long.class);
     }
 
     // array list of roles given a category name, returns null if no roles exist
-    public ArrayList<String> getRoles(String category) {
-        Document roles = (Document) settingsCollection.find(exists(category)).first();
+    public List<Long> getRoles(String category) {
+        Document roles = settingsCollection.find(exists(category)).first();
         if(roles == null)
             return null;
-        return (ArrayList<String>) roles.get(category);
+        return roles.getList(category, Long.class);
     }
 
-    public ArrayList<String> addRole(String category, String role) {
-        Document roles = (Document) settingsCollection.find(exists(category)).first();
+    public List<Long> addRole(String category, String role) {
+        Document roles = settingsCollection.find(exists(category)).first();
         if(roles == null) {
-            roles = ((Document) settingsCollection.find(exists(category)).first()).append(category, Arrays.asList().add(role));
+            roles = (settingsCollection.find(exists(category)).first()).append(category, List.of(role));
         } else {
             ArrayList<String> roleList = (ArrayList<String>) roles.get(category);
             if(!roleList.contains(role))
@@ -209,7 +197,7 @@ public class DiscordServer implements ServerSpecificAccessors{
     }
 
     public ArrayList<String> addRole(String role) {
-        Document roles = (Document) settingsCollection.find(exists("Public_Roles")).first();
+        Document roles = settingsCollection.find(exists("Public_Roles")).first();
         ArrayList<String> roleList = (ArrayList<String>) roles.get("Public_Roles");
         if(!roleList.contains(role))
             roleList.add(role);
@@ -219,7 +207,7 @@ public class DiscordServer implements ServerSpecificAccessors{
     }
 
     public ArrayList<String> removeRoll(String role) {
-        Document roles = (Document) settingsCollection.find(exists("Public_Roles")).first();
+        Document roles = settingsCollection.find(exists("Public_Roles")).first();
         if(roles == null)
             return null;
         ArrayList<String> roleList = (ArrayList<String>) roles.get("Public_Roles");
@@ -230,7 +218,7 @@ public class DiscordServer implements ServerSpecificAccessors{
     }
 
     public ArrayList<String> removeRole(String category, String role) {
-        Document roles = (Document) settingsCollection.find(exists(category)).first();
+        Document roles = settingsCollection.find(exists(category)).first();
         if(roles == null) {
             return null;
         } else {
@@ -245,9 +233,8 @@ public class DiscordServer implements ServerSpecificAccessors{
     @Override
     public Map<ObjectId, Boolean> timezoneResponses() {
         Map<ObjectId, Boolean> timezones = new HashMap<>();
-        for (Object o : userCollection.find()) {
-            Document user = (Document) o;
-            timezones.put((ObjectId) user.get("_id"), (Boolean) user.get("Print_Timezone"));
+        for (Document o : userCollection.find()) {
+            timezones.put((ObjectId) o.get("_id"), (Boolean) o.get("Print_Timezone"));
         }
         return timezones;
     }
